--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "name": "conveyor-backend",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Alanimdeo <alan@imdeo.kr>",
   "private": true,
   "scripts": {
     "prestart": "tsc",
     "start": "node dist/index.js",
-    "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn start"
+    "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn start",
+    "prebuild": "cd ../frontend && yarn build && cd ../backend",
+    "build": "tsc"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
