--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,35 @@
 {
   "name": "conveyor-frontend",
+  "version": "0.0.1",
+  "author": "Alanimdeo <alan@imdeo.kr>",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build --emptyOutDir",
-    "preview": "vite preview"
+    "dev": "vite --host",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build --emptyOutDir",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^9.13.0",
+    "element-plus": "^2.3.2",
+    "lodash": "^4.17.21",
+    "pinia": "^2.0.33",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
+    "@vue/tsconfig": "^0.1.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~5.0.3",
+    "unplugin-auto-import": "^0.15.2",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.2.1",
     "vue-tsc": "^1.2.0"
   }
 }
