--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "author": "Alanimdeo <alan@imdeo.kr>",
   "private": true,
   "scripts": {
-    "prestart": "tsc",
-    "start": "node dist/index.js",
-    "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn start",
+    "start": "supervisor dist/index.js",
+    "pretest": "tsc",
+    "test": "node dist/index.js",
+    "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn test",
     "prebuild": "cd ../frontend && yarn build && cd ../backend",
     "build": "tsc"
   },
