--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conveyor-frontend",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "author": "Alanimdeo <alan@imdeo.kr>",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "@types/node": "^18.15.11",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
     "typescript": "~5.0.3",
