--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "test": "node dist/index.js",
     "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn test",
     "prebuild": "rm -rf dist && yarn && cd ../frontend && yarn && yarn build && cd ../backend",
-    "build": "tsc"
+    "build": "tsc",
+    "alteration": "node dist/alteration/index.js"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
@@ -19,6 +20,7 @@
     "express": "~4.16.1",
     "http-errors": "^2.0.0",
     "morgan": "~1.9.1",
+    "semver": "^7.4.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
+    "@types/semver": "^7.3.13",
     "supervisor": "^0.12.0",
     "typescript": "^5.0.3"
   }
