--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,15 @@
     "alteration": "node dist/alteration/index.js"
   },
   "dependencies": {
+    "argon2": "^0.30.3",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
+    "memorystore": "^1.6.7",
     "morgan": "~1.9.1",
     "semver": "^7.4.0",
     "sqlite3": "^5.1.6"
@@ -26,6 +29,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
