--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
+    "luxon": "^3.3.0",
     "memorystore": "^1.6.7",
     "morgan": "~1.9.1",
     "semver": "^7.4.0",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
+    "@types/luxon": "^3.3.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "@types/semver": "^7.3.13",
