--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "pretest": "tsc",
     "test": "node dist/index.js",
     "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn test",
-    "prebuild": "rm -rf dist && yarn && cd ../frontend && yarn && yarn build && cd ../backend",
+    "prebuild": "rm -rf dist && yarn && cd ../frontend && yarn && yarn build && rm -rf ./node_modules&& cd ../backend",
     "build": "tsc",
     "alteration": "node dist/alteration/index.js"
   },
