--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "author": "Alanimdeo <alan@imdeo.kr>",
   "private": true,
   "scripts": {
-    "dev": "vite --host",
+    "dev": "yarn && vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build --emptyOutDir",
