--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,16 @@
   "name": "conveyor-backend",
   "version": "0.7.0",
   "author": "Alanimdeo <alan@imdeo.kr>",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "start": "supervisor dist/index.js",
     "pretest": "tsc",
     "test": "node dist/index.js",
     "dev": "supervisor -w 'src,dist/public' -e 'ts,html' --exec yarn test",
-    "prebuild": "rm -rf dist && yarn && cd ../frontend && yarn && yarn build && rm -rf ./node_modules&& cd ../backend",
+    "prebuild": "rm -rf dist && yarn && cd ../frontend && yarn && yarn build && cd ../backend",
     "build": "tsc",
+    "postbuild": "node scripts/postBuild.js",
     "alteration": "node dist/alteration/index.js"
   },
   "dependencies": {
