--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "conveyor-frontend",
   "version": "0.7.0",
   "author": "Alanimdeo <alan@imdeo.kr>",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "yarn && vite --host",
     "build": "run-p type-check build-only",
