--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,8 @@
     "lib": ["ES2022"],
     "target": "ES2022",
     "outDir": "./dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["node_modules/@types", "./src/types"]
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*"]
