--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "conveyor-frontend",
+  "name": "@conveyor/frontend",
   "version": "0.8.2",
   "author": "Alanimdeo <alan@imdeo.kr>",
   "license": "MIT",
   "private": false,
   "scripts": {
     "dev": "yarn && vite --host",
+    "prebuild": "yarn",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build --emptyOutDir",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "update-deps": "ncu -u && yarn"
   },
   "dependencies": {
+    "@conveyor/types": "*",
     "@element-plus/icons-vue": "^2.1.0",
-    "@vueuse/core": "^9.13.0",
-    "element-plus": "^2.3.2",
+    "@vueuse/core": "^10.1.2",
+    "element-plus": "^2.3.4",
     "fetch-intercept": "^2.4.0",
     "lodash": "^4.17.21",
-    "pinia": "^2.0.33",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "pinia": "^2.0.36",
+    "vue": "^3.3.2",
+    "vue-router": "^4.2.0",
     "webfontloader": "^1.6.28",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@tsconfig/node18": "^2.0.1",
+    "@types/node": "^20.1.4",
     "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/tsconfig": "^0.1.3",
+    "@vue/tsconfig": "^0.4.0",
+    "npm-check-updates": "^16.10.12",
     "npm-run-all": "^4.1.5",
-    "typescript": "~5.0.3",
-    "unplugin-auto-import": "^0.15.2",
+    "typescript": "~5.0.4",
+    "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.2.1",
-    "vue-tsc": "^1.2.0"
+    "vite": "^4.3.6",
+    "vue-tsc": "^1.6.5"
   }
 }
