--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -1,18 +1,15 @@
 {
   "compilerOptions": {
     "strict": true,
+    "declaration": true,
     "module": "CommonJS",
     "moduleResolution": "node",
     "lib": ["ES2022"],
     "target": "ES2022",
-    "outDir": "../dist",
+    "outDir": "./dist",
     "esModuleInterop": true,
-    "typeRoots": ["./src/types", "node_modules/@types"]
+    "types": []
   },
   "exclude": ["node_modules"],
-  "include": ["src/**/*"],
-  "ts-node": {
-    "files": true,
-    "require": ["tsconfig-paths/register"]
-  }
+  "include": ["src/**/*"]
 }
