--- a/backend/package.json
+++ b/backend/package.json
@@ -35,11 +35,9 @@
     "@types/http-errors": "^2.0.1",
     "@types/luxon": "^3.3.0",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.1.4",
+    "@types/node": "^20.1.7",
     "@types/semver": "^7.5.0",
-    "npm-check-updates": "^16.10.12",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.0.4"
+    "tsconfig-paths": "^4.2.0"
   }
 }
