--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "yarn && vite --host",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build --emptyOutDir",
@@ -19,7 +19,7 @@
     "element-plus": "^2.3.4",
     "fetch-intercept": "^2.4.0",
     "lodash": "^4.17.21",
-    "pinia": "^2.0.36",
+    "pinia": "^2.1.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0",
     "webfontloader": "^1.6.28",
@@ -27,17 +27,14 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^20.1.4",
+    "@types/node": "^20.1.7",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/tsconfig": "^0.4.0",
-    "npm-check-updates": "^16.10.12",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~5.0.4",
-    "unplugin-auto-import": "^0.15.3",
+    "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.6",
+    "vite": "^4.3.7",
     "vue-tsc": "^1.6.5"
   }
 }
