--- a/types/package.json
+++ b/types/package.json
@@ -4,6 +4,7 @@
   "author": "Alanimdeo <alan@imdeo.kr>",
   "license": "MIT",
   "scripts": {
+    "dev": "tsc -w",
     "build": "tsc",
     "update-deps": "ncu -u && yarn"
   },
