--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@conveyor/types": "*",
     "argon2": "^0.30.3",
+    "better-sqlite3": "^8.3.0",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.4",
@@ -25,10 +26,10 @@
     "memorystore": "^1.6.7",
     "morgan": "~1.10.0",
     "nodemon": "^2.0.22",
-    "semver": "^7.5.1",
-    "sqlite3": "^5.1.6"
+    "semver": "^7.5.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
