--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,8 @@
     "luxon": "^3.3.0",
     "memorystore": "^1.6.7",
     "morgan": "~1.10.0",
-    "nodemon": "^2.0.22",
-    "semver": "^7.5.1"
+    "semver": "^7.5.1",
+    "supervisor": "^0.12.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.4",
@@ -38,6 +38,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.7",
     "@types/semver": "^7.5.0",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
