--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,16 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "alteration": "node dist/alteration/index.js",
-    "update-deps": "ncu -u && yarn"
+    "update-deps": "ncu -u"
   },
   "dependencies": {
     "@conveyor/types": "*",
     "argon2": "^0.30.3",
-    "better-sqlite3": "^8.3.0",
+    "better-sqlite3": "^8.4.0",
     "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.6",
     "debug": "~4.3.4",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
@@ -36,7 +36,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/luxon": "^3.3.0",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.1.7",
+    "@types/node": "^20.2.5",
     "@types/semver": "^7.5.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
