--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,31 +10,31 @@
     "preview": "vite preview",
     "build-only": "vite build --emptyOutDir",
     "type-check": "vue-tsc --noEmit",
-    "update-deps": "ncu -u && yarn"
+    "update-deps": "ncu -u"
   },
   "dependencies": {
     "@conveyor/types": "*",
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.1.2",
-    "element-plus": "^2.3.4",
+    "element-plus": "^2.3.6",
     "fetch-intercept": "^2.4.0",
     "lodash": "^4.17.21",
-    "pinia": "^2.1.1",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
+    "pinia": "^2.1.3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
     "webfontloader": "^1.6.28",
     "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^20.1.7",
+    "@types/node": "^20.2.5",
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/tsconfig": "^0.4.0",
-    "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.7",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
+    "vite": "^4.3.9",
     "vue-tsc": "^1.6.5"
   }
 }
