--- a/types/package.json
+++ b/types/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "dev": "tsc -w",
     "build": "tsc",
-    "update-deps": "ncu -u && yarn"
+    "update-deps": "ncu -u"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "devDependencies": {
     "npm-check-updates": "^16.10.12",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
