--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,8 @@
 name: Docker Build and Publish
 on:
   push:
-    branches:
-      - main
+    paths:
+      - package.json
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
