--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "debug": "~4.3.4",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "luxon": "^3.3.0",
