--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^10.3.0",
     "element-plus": "^2.3.9",
     "fetch-intercept": "^2.4.0",
+    "korean-regexp": "^1.0.11",
     "lodash": "^4.17.21",
     "pinia": "^2.1.6",
     "semver": "^7.5.4",
