--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,15 +4,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     },
     "types": ["element-plus/global"],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
   },
 
   "references": [
     {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+      "path": "./tsconfig.node.json",
+    },
+  ],
 }
