--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,12 +7,12 @@
     "target": "ES2022",
     "outDir": "../dist",
     "esModuleInterop": true,
-    "typeRoots": ["./src/types", "node_modules/@types"]
+    "typeRoots": ["./src/types", "node_modules/@types"],
   },
   "exclude": ["node_modules"],
   "include": ["src/**/*"],
   "ts-node": {
     "files": true,
-    "require": ["tsconfig-paths/register"]
-  }
+    "require": ["tsconfig-paths/register"],
+  },
 }
