--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.11.0",
   "author": "Alanimdeo <alan@imdeo.kr>",
   "license": "MIT",
-  "private": false,
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "run-p type-check build-only",
@@ -14,29 +14,29 @@
   },
   "dependencies": {
     "@conveyor/types": "*",
-    "@element-plus/icons-vue": "^2.1.0",
-    "@vueuse/core": "^10.3.0",
-    "element-plus": "^2.3.9",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^11.1.0",
+    "element-plus": "^2.8.3",
     "fetch-intercept": "^2.4.0",
-    "korean-regexp": "^1.0.11",
+    "korean-regexp": "^1.0.13",
     "lodash": "^4.17.21",
-    "pinia": "^2.1.6",
-    "semver": "^7.5.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
+    "pinia": "^2.2.2",
+    "semver": "^7.6.3",
+    "vue": "^3.5.8",
+    "vue-router": "^4.4.5",
     "webfontloader": "^1.6.28",
-    "whatwg-fetch": "^3.6.17"
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.0",
-    "@types/node": "^20.4.9",
-    "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/tsconfig": "^0.4.0",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.5.5",
-    "vue-tsc": "^1.8.8"
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "^22.6.1",
+    "@types/webfontloader": "^1.6.38",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vue/tsconfig": "^0.5.1",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.7",
+    "vue-tsc": "^2.1.6"
   }
 }
