--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prebuild": "rm -rf dist && yarn",
     "build": "yarn types build; run-p -l '{frontend,backend} build'",
     "postbuild": "node scripts/postBuild.js",
-    "update-deps": "run-p -l '{frontend,backend,types} update-deps' && yarn",
+    "update-deps": "ncu -u && run-p -l '{frontend,backend,types} update-deps' && yarn",
     "precommit": "node scripts/preCommit.js"
   },
   "workspaces": [
@@ -22,8 +22,8 @@
     "frontend"
   ],
   "devDependencies": {
-    "npm-check-updates": "^16.10.12",
+    "npm-check-updates": "^17.1.3",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.6.2"
   }
 }
